--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!--Responive Design-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Real Estate</title>
+<title>Real-Estate</title>
 <head>
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
