--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		</nav>
 <!-- HOUSE LOGO SPOT -->
 		<div class="houseIconDiv-container">
-				<div class="position-left-houseicon" style="border: 1px solid black;"></div>
+				<div class="position-left-houseicon"></div>
 						<div class="houseIconDiv"><div class="houseIconLogoDiv"><h1 class="houseIcon"></h1></div></div>
 			<div class="position-right-houseicon style="border: 1px solid black;"></div>
 		</div>
@@ -139,15 +139,22 @@
 	
 <!--	01-02 LOGO AND FONTS-->
 
-<div class="LOGOplusDESIGNDIV">
-	<div class="zeroMainDiv">
-			<h1 class="zerohOneDiv"></h1>
-	</div>
+<div class="LOGOplusDESIGNDIV" style="display: flex;">
+
+	<div class="zero-container" style="flex: 1;">
+			<div class="zeroMainDiv">
+					<div class="zerohOneDiv"></div>
+			</div>
+	</div>	
 	
-	<div class="DESIGNPlusDiv">
-			<div class="classDesignText"><h6>DESIGN<div class="hrDESIGNDiv"><hr class="hrDESIGNStyle"></hr></div></h6></div>
-			
-			<div class="designPDiv"><p class="pDESIGNText">Ultra Modern House Home Design With Unique White Roof Also Gray Orange White Exterior Color Combinations Best House Exterior Design Ideas.</p></div>
+	<div class="designplus-container" style="flex: 1;">
+			<div class="DESIGNPlusDiv">
+					<div class="inside-design-container">
+							<div class="classDesignText"><h6>DESIGN<div class="hrDESIGNDiv"><hr class="hrDESIGNStyle"></hr></div></h6></div>
+					
+							<div class="designPDiv"><p class="pDESIGNText">Ultra Modern House Home Design With Unique White Roof Also Gray Orange White Exterior Color Combinations Best House Exterior Design Ideas.</p></div>
+					</div>
+			</div>
 	</div>
 </div>
 	
@@ -166,12 +173,9 @@
 <!--SEARCH BAR-->
 <div class="searchBarSuperTwoDiv">
 				  <div class="searchbarDIVDIV">
-  <input type="search" class="searchbar--input" placeholder="ADDRESS, CITY, ZIP, NEIGHBORHOOD">
-<div class="searchbar--buttons">
-    <input type="submit" class="searchbar--submit" value="Search">
-    <div class="select-wrapper">
-    </div>
-					  </div>
+	<input type="search" class="searchbar--input" placeholder="ADDRESS, CITY, ZIP, NEIGHBORHOOD">
+	<input type="submit" class="searchbar--submit" value="Search">
+
   </div>
 </div>
 <!--BELOW SEARCH BAR-->
